# ChangeLog for net-analyzer/metasploit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/metasploit/ChangeLog,v 1.27 2008/02/25 20:13:58 pva Exp $

  25 Feb 2008; <pva@gentoo.org> -metasploit-3.0-r1.ebuild,
  metasploit-3.1.ebuild:
  Updated fetch URI, bug 211428. Thank Muelli for report. Removed unused.

  25 Feb 2008; <pva@gentoo.org> metasploit-3.1.ebuild:
  Fixed typo, thank Anton Bolshakov for report in bug #142778.

*metasploit-3.1 (30 Jan 2008)

  30 Jan 2008; <pva@gentoo.org> -metasploit-2.6.ebuild,
  metasploit-2.7.ebuild, metasploit-3.0-r1.ebuild, +metasploit-3.1.ebuild:
  Version bump.

*metasploit-3.0-r1 (13 Oct 2007)

  13 Oct 2007; Cédric Krier <cedk@gentoo.org> -metasploit-3.0.ebuild,
  +metasploit-3.0-r1.ebuild:
  Fix rails version for bug #195652

*metasploit-3.0 (09 Sep 2007)

  09 Sep 2007; Cédric Krier <cedk@gentoo.org> +files/msfweb3.confd,
  +files/metasploit-3.0.patch, +files/msfweb3.initd, +metasploit-3.0.ebuild:
  Version bump with new slot for bug #142778

  07 Feb 2007; Simon Stelling <blubb@gentoo.org> metasploit-2.7.ebuild:
  stable on amd64; bug 164246

  03 Feb 2007; Jason Wever <weeve@gentoo.org> metasploit-2.7.ebuild:
  Added ~sparc keyword.

  03 Feb 2007; nixnut <nixnut@gentoo.org> metasploit-2.7.ebuild:
  Stable on ppc wrt bug 164246

  28 Jan 2007; Raúl Porcel <armin76@gentoo.org> metasploit-2.7.ebuild:
  x86 stable wrt bug 164246

  11 Nov 2006; <malc@gentoo.org> metasploit-2.6.ebuild:
  Stable on amd64 - bug #153912

  05 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  metasploit-2.6.ebuild:
  stabled x86, bug #153912

  03 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> metasploit-2.6.ebuild:
  Stable on ppc. Bug #153912

  03 Nov 2006; Peter Volkov <pva@gentoo.org> files/msfweb.initd:
  Fixed init script issue caused msfweb not to stop properly. Thank Timothy
  Redaelli for report in bug #153912.

*metasploit-2.7 (02 Nov 2006)
