@@ -5,7 +5,8 @@ AUX msfweb3.confd 234 RMD160 2cad154dc7ac4e836e8b4dd8c4366521742f90b3 SHA1 c3bac
 AUX msfweb3.initd 578 RMD160 47baabd2beb338fd8a067694830400801a028c1a SHA1 6a5ec10c2c82925e6e731c46f8b0fcfa607b9502 SHA256 79c74ded23d8541cf470e6c24aa2ebf45bcb4460e456c273ec0e1da4d156f066
 DIST framework-2.7.tar.gz 5800216 RMD160 cfdf2705522c845bb4405413207a7df0f3873b94 SHA1 da5d41dfa13e549aacd4fbf2994877cbe80ceed9 SHA256 516952772aaa8982628460b927c9119850925f870903c5a131a9c9f0390cf77f
 DIST framework-3.1.tar.gz 10076364 RMD160 19259b5a0e682ab4d92f19acc1cb4173d8eeca94 SHA1 af0036e53cffc1c82891a590bd8c0c22a06e3cc8 SHA256 dda9009180f2f6c72446afb6c8e1a755810698fee39e22d94bd033d712b69f84
-EBUILD metasploit-2.7.ebuild 1482 RMD160 457346969510a112badf03e25804eb7d46cec4fe SHA1 d8849660c1c8f4de4d6fcd482d2c0b2a00e7a0f3 SHA256 87a6a95dbb30921e3e45ea59625c2b80927e8ce3e66e2090989e6a0d903421a9
-EBUILD metasploit-3.1.ebuild 2097 RMD160 bae8465b2c2fbd07371b1e44b60e5a5e1e47189b SHA1 eceed9c6398c3d7a02dc108ddce442320237dbcd SHA256 3708d0ab1c93de5df4bb4a0a454b27314a00fb6c37fecf0a1913ff018cd5b7cc
-MISC ChangeLog 4347 RMD160 bb430accff2e213c2daf773ca824e6c5646d9c51 SHA1 df214a65909ea9a34a829c95e93a7d8d3fc187b1 SHA256 1d1cd60f869a1e2cd8f2a4463dfa73bcb20a2a18e78553b6bef752fecb37f506
+EBUILD metasploit-2.7.ebuild 1451 RMD160 c378a9ff30e8d0901435b59e9bed85dae4d2fd21 SHA1 0edca81de4db57c822d43995ea505c609d73060d SHA256 7de09416135243c72b6c0b13e898aa4ff3d163b4190920062cfe65c7e39cda36
+EBUILD metasploit-3.1.ebuild 2066 RMD160 ab256eefdec3d5b8e8c00dd4f123b70cd947de94 SHA1 f0e9c7e9b965f2fb3af779974c4b905b6d3770e3 SHA256 7b0cd59fccb0bfacac006b727347706f86c785b88136c87db08ee75d0df63e55
+EBUILD metasploit-3.1_p5422.ebuild 3071 RMD160 0066cef9ffd2f4a1bb18b37c60db0ca4833517f8 SHA1 aa6c8cc8c6505a85f477fd66f6f8b12cc14d3278 SHA256 57562afaf1966b296d0e6572b4132a9159b7a3ad1a853cbbe81d1da7505b91a5
+MISC ChangeLog 4809 RMD160 81503406a565acb8dfb1641f2bf2bbc79b33c312 SHA1 c109979813c364f534cf4140a0eb8fd2bc817120 SHA256 7b9174b0524aade1e2c07d4ac385fd27bfcd61d4033164ab0662b13afabae993
 MISC metadata.xml 863 RMD160 90c921bdc34bc98f2c43fb75f633dbdeb65561ae SHA1 022699039a88ca8d53bd75d0b20dbd8709953d55 SHA256 594bd50431c2ecc70b0834fed0dbfe28bac86201fb4e5b20989a56baa8f21eff
